// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getBinaryPath when OS is "darwin" returns CLI filepath 1`] = `"directory/name"`;

exports[`getBinaryPath when OS is "linux" returns CLI filepath 1`] = `"directory/name"`;

exports[`getBinaryPath when OS is "win32" returns CLI filepath 1`] = `"directory/name.exe"`;

exports[`getDownloadObject when OS is "darwin" and arch is "arm64" gets download object 1`] = `
{
  "binaryDirectory": "",
  "url": "https://github.com/ollama/ollama/releases/download/v0.5.11/ollama-darwin.tgz",
}
`;

exports[`getDownloadObject when OS is "darwin" and arch is "x64" gets download object 1`] = `
{
  "binaryDirectory": "",
  "url": "https://github.com/ollama/ollama/releases/download/v0.5.11/ollama-darwin.tgz",
}
`;

exports[`getDownloadObject when OS is "linux" and arch is "arm64" gets download object 1`] = `
{
  "binaryDirectory": "bin",
  "url": "https://github.com/ollama/ollama/releases/download/v0.5.11/ollama-linux-arm64.tgz",
}
`;

exports[`getDownloadObject when OS is "linux" and arch is "x64" gets download object 1`] = `
{
  "binaryDirectory": "bin",
  "url": "https://github.com/ollama/ollama/releases/download/v0.5.11/ollama-linux-amd64.tgz",
}
`;

exports[`getDownloadObject when OS is "win32" and arch is "arm64" gets download object 1`] = `
{
  "binaryDirectory": "",
  "url": "https://github.com/ollama/ollama/releases/download/v0.5.11/ollama-windows-arm64.zip",
}
`;

exports[`getDownloadObject when OS is "win32" and arch is "x64" gets download object 1`] = `
{
  "binaryDirectory": "",
  "url": "https://github.com/ollama/ollama/releases/download/v0.5.11/ollama-windows-amd64.zip",
}
`;
